[package]
name = "teleporter"
version = "0.1.0"
authors = ["willyrgf <willyr.goncalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
diesel = { version = "1.4.7", features = ["postgres", "numeric", "uuidv07"] }
diesel-citext = "0.3.0"
uuid = { version = "0.7.4", features = ["v4"] }
# uuid = { version = ">=0.7.0, <0.9.0" }
# uuid = { version = "0.8", features = ["v4"] }
# uuid = { version = ">=0.2.0, <0.7.0", optional = true,  features = ["use_std"] }
# uuidv07 = { version = ">=0.7.0, <0.9.0", optional = true, package = "uuid"}
bigdecimal = "0.1.2"