[package]
name = "teleporter"
version = "0.1.0"
authors = ["willyrgf <willyr.goncalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance-rs-async = "1.1.4"
diesel = { version = "1.4.7", features = ["postgres", "numeric", "uuidv07"] }
diesel-citext = "0.3.0"
uuid = { version = "0.7.4", features = ["v4", "serde"] }
# uuid = { version = ">=0.7.0, <0.9.0" }
# uuid = { version = "0.8", features = ["v4"] }
# uuid = { version = ">=0.2.0, <0.7.0", optional = true,  features = ["use_std"] }
# uuidv07 = { version = ">=0.7.0, <0.9.0", optional = true, package = "uuid"}
bigdecimal = { version = "0.1.2", features = ["serde"] }
serde = "1.0.126"
serde_json = "1.0.66"
structopt = "0.3.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
